--- a/apps/lifeweb/src/styles.scss
+++ b/apps/lifeweb/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+div.p-menubar-end button.p-button {
+  margin-left: 0.5em;
+}
