Active menu highlighting.

--- a/apps/lifeweb/src/styles.scss
+++ b/apps/lifeweb/src/styles.scss
@@ -2,3 +2,7 @@
 div.p-menubar-end button.p-button {
   margin-left: 0.5em;
 }
+.p-menuitem-link-active {
+  border: 1px solid #84a8c7;
+  background-color: #8dcdff42;
+}
