testing collections and document

--- a/apps/lifeweb/src/app/member/pages/member-dashboard/member-dashboard.component.html
+++ b/apps/lifeweb/src/app/member/pages/member-dashboard/member-dashboard.component.html
@@ -58,3 +58,5 @@
   </p-sidebar>
 </form>
 <!-- <button type="submit" (click)="onSubmit()">Submit</button> -->
+<button type="submit" (click)="onSubmitV2()">SubmitV2</button>
+<button type="submit" (click)="onSubmitTest()">SubmitTest</button>
